slight cleanup